etc/iptables/rules.v4
# Generated by iptables-save v1.4.21 on Tue May 16 11:21:29 2017
*nat
:PREROUTING ACCEPT [168:12292]
:INPUT ACCEPT [144:10672]
:OUTPUT ACCEPT [33:2028]
:POSTROUTING ACCEPT [33:2028]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Tue May 16 11:21:29 2017
# Generated by iptables-save v1.4.21 on Tue May 16 11:21:29 2017
*filter
:INPUT DROP [2:108]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [106:20450]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:fail2ban-ssh - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
-A fail2ban-ssh -j RETURN
COMMIT
# Completed on Tue May 16 11:21:29 2017
